# matchit-scraper

./: .flake8  .gitignore  README.md  config.py  create_indexes.py  database.py  deduplicate_boulders.py  main.py  migration.py  ml_algorithm.py  pyproject.toml  scraper.py  test.py  test_indexes.py  update_and_deploy.py  update_area_numbers.py
ml/: ascents_similarity.py  crud.py  feature_similarity.py  grade_similarity.py  matrix_cleaning.py
ml/notebooks/: v0_testing.ipynb  v1_cosine_smilarity_on_ascents.ipynb  v2_advanced_similarity_calculation.ipynb  v3_matrix_testing.ipynb  v4_matrix_factorization.ipynb  v5_8anu.ipynb
models/: area.py  ascent.py  base.py  boulder.py  boulder_setter.py  boulder_style.py  country.py  crag.py  grade.py  region.py  sector.py  similarity.py  style.py  user.py
scraping/: area_scraping.py  ascent.py  boulder.py  boulder_scraping.py  crud.py  fetch.py  helper.py  query.py
script/: cleanup.py  create_indexes.py  deduplicate.py  deduplicate_boulders.py  migration.py  scraper.py  similarity.py  similarity_calculation.py  update_area_numbers.py
