[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["cmareau-git"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
sqlalchemy = "^2.0.45"
scipy = "^1.16.3"
numpy = "^2.4.0"
pandas = "^2.3.3"
ipykernel = "^7.1.0"
scikit-learn = "^1.8.0"
rapidfuzz = "^3.14.3"
dotenv = "^0.9.9"
psycopg2 = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
